--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -1,16 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardCornerRadius="15dp"
+    app:cardBackgroundColor="#E8D73F"
+    >
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+
+            >
         <TextView
             android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Product name"
             android:textSize="34sp"
+            android:textStyle="bold"
             />
         <TextView
             android:id="@+id/price"
@@ -31,16 +38,19 @@
             android:layout_marginStart="26dp"
             />
 
-                <ImageView
+                <Button
                     android:id="@+id/sell"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_marginStart="133dp"
-                    android:layout_toEndOf="@+id/name"
-                    android:src="@drawable/ic_done"
+                    android:layout_width="75sp"
+                    android:layout_height="55sp"
+                    android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true"
+                    android:layout_marginEnd="24dp"
+                    android:text="Sell"
+                    android:textSize="20sp"
+                    android:background="#3F6E0A"
+                    android:textColor="#D36C4B"
+                    android:textStyle="bold"
                     />
-
 
         </RelativeLayout>
 
