--- a/app/src/main/res/menu/detailmenu.xml
+++ b/app/src/main/res/menu/detailmenu.xml
@@ -1,4 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <item
+        android:id="@+id/dlt_item"
+        android:title="@string/delete"
+        android:icon="@drawable/ic_delete"
+        app:showAsAction="always"
+        />
+    <item
+        android:id="@+id/done"
+        android:title="@string/done"
+        android:icon="@drawable/ic_done"
+        app:showAsAction="ifRoom|ifRoom"
+        />
 
 </menu>
