--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -41,16 +41,15 @@
                 <Button
                     android:id="@+id/sell"
                     android:layout_width="50sp"
-                    android:layout_height="50sp"
+                    android:layout_height="36sp"
                     android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true"
-                    android:layout_marginEnd="8dp"
-                    android:text="Sell"
-                    android:textSize="20sp"
+                    android:layout_marginEnd="14dp"
                     android:background="#3F6E0A"
+                    android:text="Sell"
+                    android:layout_marginTop="4dp"
                     android:textColor="#D36C4B"
-                    android:textStyle="bold"
-                    />
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
 
         </RelativeLayout>
 
